--- a/src/main/java/com/yahoo/seanhanway/CDLibraryFX/CDLibraryFX.fxml
+++ b/src/main/java/com/yahoo/seanhanway/CDLibraryFX/CDLibraryFX.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:controller="CDLibraryFX.Controller"
+<GridPane fx:controller="com.yahoo.seanhanway.CDLibraryFX.Controller"
           stylesheets="/Styling/ApplicationStyle.css"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
           styleClass="root">
