--- a/src/main/java/com/yahoo/seanhanway/CDLibraryFX/ApplicationStyle.css
+++ b/src/main/java/com/yahoo/seanhanway/CDLibraryFX/ApplicationStyle.css
@@ -1,11 +1,11 @@
 .root {
-     -fx-background-image: url("../../../../src/main/resources/images/background.jpg");
+     -fx-background-image: url("../../../../../../../src/main/resources/images/background2.jpg");
 }
 .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
-    -fx-text-fill: #333333;
-    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+    -fx-text-fill: #0D0204;
+    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 2,0,0,1 );
 }
 .button {
     -fx-text-fill: white;
