--- a/src/main/java/com/yahoo/seanhanway/CDLibraryFX/ApplicationStyle.css
+++ b/src/main/java/com/yahoo/seanhanway/CDLibraryFX/ApplicationStyle.css
@@ -1,9 +1,12 @@
 .root {
      -fx-background-image: url("../../../../../../../src/main/resources/images/background2.jpg");
 }
+.menubar {
+        -fx-text-fill: white;
+        -fx-font-family: "Arial";
+}
 .label {
     -fx-font-size: 12px;
-    -fx-font-weight: bold;
     -fx-text-fill: #0D0204;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 2,0,0,1 );
 }
