--- a/src/main/java/com/yahoo/seanhanway/CDLibraryFX/CDLibraryFX.fxml
+++ b/src/main/java/com/yahoo/seanhanway/CDLibraryFX/CDLibraryFX.fxml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:controller="com.yahoo.seanhanway.CDLibraryFX.CDLibraryFXController"
-          stylesheets="/com/yahoo/seanhanway/CDLibraryFX/ApplicationStyle.css"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
-          styleClass="root">
-    <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
+<GridPane alignment="center" hgap="10" styleClass="root" stylesheets="/com/yahoo/seanhanway/CDLibraryFX/ApplicationStyle.css" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="com.yahoo.seanhanway.CDLibraryFX.CDLibraryFXController">
+    <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
-
-    <Text id="welcome-text" text="Welcome"
-          GridPane.columnIndex="0" GridPane.rowIndex="0"
-          GridPane.columnSpan="2"/>
-
-    <Label text="User Name:"
-           GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-
-    <TextField
-            GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-
-    <Label text="Password:"
-           GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-
-    <PasswordField fx:id="passwordField"
-                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-
-    <HBox spacing="10" alignment="bottom_right"
-          GridPane.columnIndex="1" GridPane.rowIndex="4">
-        <Button text="Sign In"
-                id="windows7"
-                onAction="#handleSubmitButtonAction"/>
-    </HBox>
-
-    <Text fx:id="actiontarget"
-          GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+   <children>
+   
+       <Text id="welcome-text" text="Welcome" GridPane.columnIndex="1" GridPane.columnSpan="2" />
+   
+       <Label text="User Name:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+   
+       <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+   
+       <Label text="Password:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+   
+       <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+   
+       <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <children>
+              <Button id="windows7" onAction="#handleSubmitButtonAction" text="Sign In" />
+      </children>
+       </HBox>
+   
+       <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+   </children>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 
 </GridPane>
