--- a/src/main/java/com/yahoo/seanhanway/CDLibraryFX/SaveResultDialogueWindow.fxml
+++ b/src/main/java/com/yahoo/seanhanway/CDLibraryFX/SaveResultDialogueWindow.fxml
@@ -6,9 +6,7 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="85.0" prefWidth="323.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.yahoo.seanhanway.CDLibraryFX.SaveResultDialogueWindowController">
-   <children>
       <HBox layoutX="75.0" layoutY="-8.0" prefHeight="85.0" prefWidth="323.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
-         <children>
             <Text fx:id="popuptext" strokeType="OUTSIDE" strokeWidth="0.0" text="Library Successfully Saved">
                <font>
                   <Font name="Arial" size="15.0" />
@@ -17,12 +15,10 @@
                   <Insets left="10.0" right="15.0" top="15.0" />
                </HBox.margin>
             </Text>
-            <Button mnemonicParsing="false" onAction="#closeStage" stylesheets="@PopupWindowStyle.css" text="OK">
+            <Button mnemonicParsing="false" onAction="#closeStage" stylesheets="@../Styles/PopupWindowStyle.css" text="OK">
                <HBox.margin>
                   <Insets left="10.0" top="15.0" />
                </HBox.margin>
             </Button>
-         </children>
       </HBox>
-   </children>
 </AnchorPane>
